<resources>
    <string name="app_name">Dice Roller</string>
    <string name="_1">1</string>
    <string name="roll">Roll</string>
    <string name="channel_name">dice roller</string>
    <string name="channel_description">Dice roller game</string>
    <string name="dice_image">dice image</string>
    <string name="animate">animate</string>
    <string name="translate">Translate</string>
    <string name="scale">Scale</string>
    <string name="fade">Fade</string>
    <string name="sky_color">Sky Color</string>
    <string name="shower">Shower</string>
    <string name="rotate">Rotate</string>
</resources>